--- a/Areas/Admin/Views/Blogs/Edit.cshtml
+++ b/Areas/Admin/Views/Blogs/Edit.cshtml
@@ -3,12 +3,86 @@
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    var blog = ViewBag.Blog;
+}
+@section Styles {
+    <link rel="stylesheet" href="~/admin/js/plugins/select2/css/select2.min.css">
+}
+@section Scripts {
+    <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
+    <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
+    <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
+    <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
+
+    <script>Dashmix.helpersOnLoad(['jq-select2', 'js-ckeditor']);</script>
 }
 
 <h1>Edit</h1>
 
 <h4>Blog</h4>
 <hr />
+
+
+
+
+<form asp-action="Edit" id="blog-form" enctype="multipart/form-data">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="col-8" style="background-color:white;display:flex; justify-content:center;align-items:center; margin:10px 200px">
+
+        <div class="col-10">
+            <div class="block-header block-header-default">
+                <h3 class="block-header-default" style="margin:10px">Add Post</h3>
+            </div>
+            <div class="col-8 form-group">
+                <label class="form-label" asp-for="Thumbnail">Image</label>
+                <input type="file" id="thumbnail" asp-for="Thumbnail" class="form-control" accept="image/*" />
+                <img id="imagePreview" src="~/img/blogs/@blog.Thumbnail.Name" style="display:block; max-width: 400px; max-height: 300px; " />
+            </div>
+
+            <div class="col-8 form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" id="blog-name" value="@blog.Name" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+
+            <div class="col-8  form-group">
+                <label asp-for="Slug" class="control-label"></label>
+                <input asp-for="Slug" class="form-control" id="blog-slug" value="@blog.Slug" />
+                <span asp-validation-for="Slug" class="text-danger"></span>
+            </div>
+
+            <div class="col-8 form-group">
+                <label class="form-label" asp-for="TopicID">Topic</label>
+                <select class="js-select2 form-select" id="topic-id" asp-for="TopicID" style="width: 100%;" data-placeholder="Choose topic..">
+                    <option></option>
+                    @foreach (var topic in ViewBag.Topics)
+                    {
+                        <option value="@topic.Id" selected="@(topic.Id==blog.TopicID)">@topic.Name</option>
+                    }
+                    <!-- Add dynamic options if needed -->
+                </select>
+            </div>
+
+            <div class="form group">
+                <label class="form-label">Content</label>
+                <textarea id="js-ckeditor">
+                    @blog.Content
+                </textarea>
+            </div>
+            <div class="mb-4 form-group" style="display:flex; justify-content:end;">
+                <button type="button" class="btn btn-danger" style="margin:10px"> <a asp-action="Index" style="color:white">Back to List</a></button>
+                <button type="submit" class="btn btn-primary" style="margin:10px">Update Post</button>
+            </div>
+
+
+        </div>
+    </div>
+</form>
+
+
+
+
+@*
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -59,7 +133,9 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+ *@
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
