--- a/Areas/Admin/Views/Blogs/Index.cshtml
+++ b/Areas/Admin/Views/Blogs/Index.cshtml
@@ -4,10 +4,13 @@
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+@section Styles {
+    <link rel="stylesheet" href="~/admin/js/plugins/sweetalert2/sweetalert2.min.css">
+}
 
 <h1>Index</h1>
 
-<p>
+@* <p>
     <a asp-action="Create">Create New</a>
 </p>
 
@@ -61,7 +64,81 @@
         </tr>
 }
     </tbody>
-</table> 
+</table>  *@
 
+<div class="content">
+    <div class="block block-rounded">
+        <div class="block-header block-header-default">
+            <h3 class="block-title">List Posts</h3>
+            <div class="block-options">
+                <a class="btn btn-hero btn-primary" asp-action="Create">
+                    <i class="fa-regular fa-plus"></i> Add
+                </a>
+            </div>
+        </div>
+        <div class="block-content">
+            <table class="table align-middle">
+                <thead>
+                    <tr>
+                        <th>
+                            ID
+                        </th>
+                        <th>
+                            Tiêu đề
+                        </th>
+                        <th>
+                            Tác giả
+                        </th>
+                        <th>
+                            Thời gian tạo
+                        </th>
+                        <th>
+                            Chủ đề
+                        </th>
+                        <th class="text-center">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                        @if (item.IsDetele == false)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Id)
+                                </td>
+                                <td>
+                                    <div class="d-flex gap-2 align-items-center">
+                                        <img class="rounded" style="width: 40px; height: 40px" src="~/img/blogs/@Html.DisplayFor(modelItem => item.Thumbnail.Name)" />
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </div>
+                                </td>
+                                <td class="fw-semibold">
+                                    @Html.DisplayFor(modelItem => item.CreateBy)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CreatedAt)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Topic.Name)
+
+                                <td class="text-center">
+                                    <div class="btn-group">
+                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-alt-secondary js-bs-tooltip-enabled" data-bs-toggle="tooltip" aria-label="Edit" data-bs-original-title="Edit">
+                                            <i class="fa fa-pencil-alt"></i>
+                                        </a>
+                                        <button type="button" data-id="@item.Id" class="btn btn-sm btn-alt-secondary js-bs-tooltip-enabled btn-delete" data-bs-toggle="tooltip" aria-label="Delete" data-bs-original-title="Delete">
+                                            <i class="fa fa-times"></i>
+                                        </button>
+                                    </div>
+
+                                </td>
+                            </tr>
+                        }
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+</div>
 
 
