--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+	ViewData["Title"] = "Account";
 }
+<main class="bg-body" style="background-color: #f8f8f8">
+	<h1>Hello hgbaodev</h1>
+</main>
