--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -161,7 +161,7 @@
 														<a asp-controller="authentication" asp-action="signin"><i class="ti-package"></i>My Orders</a>
 													</li>
 													<li>
-														<a asp-controller="authentication" asp-action="signin"><i class="ti-user"></i>My Profile</a>
+														<a asp-controller="account" asp-action="index"><i class="ti-user"></i>My Profile</a>
 													</li>
 													<li>
 														<a href="help"><i class="ti-help-alt"></i>Help and Faq</a>
