fix produdct fillter add fix api customer

--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -1,6 +1,23 @@
 ﻿@{
 	ViewData["Title"] = "Account";
 }
-<main class="bg-body" style="background-color: #f8f8f8">
-	<h1>Hello hgbaodev</h1>
+<main style="background-color: #f5f5fa">
+	<div class="container magrin_30">
+		<nav aria-label="breadcrumb" class="mt-3">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="/">Home</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Information</li>
+			</ol>
+		</nav>
+		<div class="row">
+			<div class="col-3 bg-secondary" style="height: 400px">
+
+			</div>
+			<div class="col-9 bg-danger">
+				<div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 </main>
