--- a/Areas/Admin/Views/Blogs/Edit.cshtml
+++ b/Areas/Admin/Views/Blogs/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model ShoeShop.Models.Blog
 
+
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
-    var blog = ViewBag.Blog;
 }
 @section Styles {
     <link rel="stylesheet" href="~/admin/js/plugins/select2/css/select2.min.css">
@@ -13,8 +13,11 @@
     <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
-
+    <script src="~/admin//js/blog/add-blog.js"></script >
     <script>Dashmix.helpersOnLoad(['jq-select2', 'js-ckeditor']);</script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
 
 <h1>Edit</h1>
@@ -25,7 +28,7 @@
 
 
 
-<form asp-action="Edit" id="blog-form" enctype="multipart/form-data">
+@* <form asp-action="Edit" id="blog-form" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="col-8" style="background-color:white;display:flex; justify-content:center;align-items:center; margin:10px 200px">
 
@@ -34,30 +37,30 @@
                 <h3 class="block-header-default" style="margin:10px">Add Post</h3>
             </div>
             <div class="col-8 form-group">
-                <label class="form-label" asp-for="Thumbnail">Image</label>
+                @* <label class="form-label" asp-for="Thumbnail">Image</label>
                 <input type="file" id="thumbnail" asp-for="Thumbnail" class="form-control" accept="image/*" />
-                <img id="imagePreview" src="~/img/blogs/@blog.Thumbnail.Name" style="display:block; max-width: 400px; max-height: 300px; " />
+                <img id="imagePreview" src="~/img/blogs/@blog.Thumbnail.Name" style="display:block; max-width: 400px; max-height: 300px; " /> 
             </div>
 
             <div class="col-8 form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" id="blog-name" value="@blog.Name" />
+                <input asp-for="Name" class="form-control" id="blog-name" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
             <div class="col-8  form-group">
                 <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" id="blog-slug" value="@blog.Slug" />
+                <input asp-for="Slug" class="form-control" id="blog-slug"  />
                 <span asp-validation-for="Slug" class="text-danger"></span>
             </div>
 
             <div class="col-8 form-group">
-                <label class="form-label" asp-for="TopicID">Topic</label>
-                <select class="js-select2 form-select" id="topic-id" asp-for="TopicID" style="width: 100%;" data-placeholder="Choose topic..">
+                <label class="form-label" asp-for="TopicId">Topic</label>
+                <select class="js-select2 form-select" id="topic-id" asp-for="TopicId" style="width: 100%;" data-placeholder="Choose topic..">
                     <option></option>
                     @foreach (var topic in ViewBag.Topics)
                     {
-                        <option value="@topic.Id" selected="@(topic.Id==blog.TopicID)">@topic.Name</option>
+                        <option value="@topic.Id" selected="@(topic.Id)">@topic.Name</option>
                     }
                     <!-- Add dynamic options if needed -->
                 </select>
@@ -77,51 +80,53 @@
 
         </div>
     </div>
-</form>
+</form> *@
 
 
 
 
-@*
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            @* <input type="hidden" asp-for="Id" /> *@
             <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
+                 <label class="form-label" asp-for="Thumbnail">Image</label>
+                <input type="file" id="thumbnail" asp-for="Thumbnail" class="form-control" accept="image/*"/>
+                <img id="imagePreview"  style="display:block; max-width: 400px; max-height: 300px; " />
             </div>
+
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Slug" class="control-label"></label>
+                <input asp-for="Slug" class="form-control" />
+                <span asp-validation-for="Slug" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CreatedAt" class="control-label"></label>
-                <input asp-for="CreatedAt" class="form-control" />
+                <input asp-for="CreatedAt" class="form-control" readonly/>
                 <span asp-validation-for="CreatedAt" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreateBy" class="control-label"></label>
-                <input asp-for="CreateBy" class="form-control" />
+                <input asp-for="CreateBy" class="form-control" readonly/>
                 <span asp-validation-for="CreateBy" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TopicID" class="control-label"></label>
-                <select asp-for="TopicID" class="form-control" asp-items="ViewBag.TopicID"></select>
+                <select asp-for="TopicID" class="form-control" asp-items="ViewBag.TopicId">
+                </select>
                 <span asp-validation-for="TopicID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <textarea id="js-ckeditor" asp-for="Content" class="form-control"></textarea> />
                 <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDetele" /> @Html.DisplayNameFor(model => model.IsDetele)
-                </label>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -133,9 +138,5 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
- *@
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
+ 
+
