--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -11,11 +11,20 @@
 		</nav>
 		<div class="row">
 			<div class="col-3 bg-secondary" style="height: 400px">
-
+				<nav class="navbar navbar-light bg-light">
+					<div class="container-fluid">
+						<a class="navbar-brand" href="#">Navbar</a>
+					</div>
+				</nav>
+				<nav class="navbar navbar-light bg-light">
+					<div class="container-fluid">
+						<span class="navbar-brand mb-0 h1">Navbar</span>
+					</div>
+				</nav>
 			</div>
 			<div class="col-9 bg-danger">
 				<div>
-
+					vienamese
 				</div>
 			</div>
 		</div>
