--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-}
-@model IEnumerable<ShoeShop.Models.Product>
+﻿@model IEnumerable<ShoeShop.Models.Product>
 @{
 	ViewData["Title"] = "Products";
 }
