--- a/Areas/Admin/Views/Brands/Index.cshtml
+++ b/Areas/Admin/Views/Brands/Index.cshtml
@@ -1,13 +1,11 @@
-﻿@model IEnumerable<ShoeShop.Models.Brand>
-
-@{
-    ViewData["Title"] = "Index";
+﻿@{
+    ViewData["Title"] = "Brands";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-
 @section Styles {
     <link rel="stylesheet" href="~/admin/js/plugins/sweetalert2/sweetalert2.min.css">
+    <link rel="stylesheet" href="~/admin/js/plugins/datatables-bs5/css/dataTables.bootstrap5.min.css">
 }
 
 <!-- Hero -->
@@ -38,92 +36,116 @@
                 </a>
             </div>
         </div>
-        <div class="block-content">
-            <form action="/Admin/Brands" method="get">
-                <div class="row mb-3">
-                    <div class="input-group">
-                        <input type="text" class="form-control form-control-alt" id="SearchString" name="SearchString" placeholder="Nội dung câu hỏi...">
-                        <button type="submit" class="input-group-text bg-body border-0 btn-search">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-
-            <table class="table">
+        <div class="block-content pb-4">
+            <table class="table table-bordered table-striped table-vcenter" id="color-table">
                 <thead>
                     <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Id)
+                        <th style="width: 80px;">
+                            ID
                         </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Name)
+                        <th style="width: 75%">
+                            Name
                         </th>
                         <th class="text-center">Action</th>
                     </tr>
                 </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Id)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
-                            <td class="text-center">
-                                <div class="btn-group">
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-alt-secondary js-bs-tooltip-enabled" data-bs-toggle="tooltip" aria-label="Edit" data-bs-original-title="Edit">
-                                        <i class="fa fa-pencil-alt"></i>
-                                    </a>
-                                    <button type="button" data-id="@item.Id" class="btn btn-sm btn-alt-secondary js-bs-tooltip-enabled btn-delete" data-bs-toggle="tooltip" aria-label="Delete" data-bs-original-title="Delete">
-                                        <i class="fa fa-times"></i>
-                                    </button>
-                                </div>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
             </table>
+
         </div>
     </div>
 </div>
 
 @section Scripts {
     <script src="~/admin/js/plugins/sweetalert2/sweetalert2.min.js"></script>
+    <script src="~/admin/js/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/admin/js/plugins/datatables-bs5/js/dataTables.bootstrap5.min.js"></script>
     <script>
-        // Lấy giá trị tìm kiếm từ query string của URL
-        var urlParams = new URLSearchParams(window.location.search);
-        var searchString = urlParams.get('SearchString');
+        $(document).ready(function () {
+            jQuery.extend(jQuery.fn.dataTable.ext.classes, {
+                sWrapper: "dataTables_wrapper dt-bootstrap5",
+                sFilterInput: "form-control",
+                sLengthSelect: "form-select"
+            });
+            jQuery.extend(!0, jQuery.fn.dataTable.defaults, {
+                language: {
+                    lengthMenu: "_MENU_",
+                    search: "_INPUT_",
+                    searchPlaceholder: "Search..",
+                    info: "Page <strong>_PAGE_</strong> of <strong>_PAGES_</strong>",
+                    paginate: {
+                        first: '<i class="fa fa-angle-double-left"></i>',
+                        previous: '<i class="fa fa-angle-left"></i>',
+                        next: '<i class="fa fa-angle-right"></i>',
+                        last: '<i class="fa fa-angle-double-right"></i>'
+                    }
+                }
+            });
+            var table = $("#color-table").DataTable({
+                pageLength: 5,
+                lengthMenu: [
+                    [5, 10, 20],
+                    [5, 10, 20]
+                ],
+                autoWidth: !1,
+                "processing": true,
+                "serverSide": true,
+                "filter": true,
+                "ajax": {
+                    "url": "/admin/brands/getbrands",
+                    "type": "POST",
+                    "datatype": "json"
+                },
+                "columnDefs": [
+                    {
+                        "targets": [0, 2],
+                        "sortable": false
+                    }
+                ],
+                "columns": [
+                    { "data": "id", "name": "Id" },
+                    { "data": "name", "name": "Name" },
+                    {
+                        "render": function (data, type, row) {
+                            return `<div class="btn-group">
+                                                            <a href="/admin/categories/edit/${row.id}" class="btn btn-sm btn-alt-secondary">
+                                                                <i class="fa fa-pencil-alt"></i>
+                                                            </a>
+                                                            <button type="button" data-id="${row.id}" class="btn btn-sm btn-alt-secondary btn-delete">
+                                                                <i class="fa fa-times"></i>
+                                                            </button>
+                                                        </div>`;
+                        }, "className": "text-center"
+                    },
+                ]
+            });
+        });
 
-        // Gán giá trị tìm kiếm vào ô input value
-        document.getElementById('SearchString').value = searchString;
         $(document).on("click", ".btn-delete", async function () {
             let trid = $(this).data("id");
             let result = await Swal.fire({
                 title: "Are you sure?",
-                text: "Would you like to delete this category?",
+                text: "Would you like to delete this brand?",
                 icon: "warning",
                 showCancelButton: true,
-                confirmButtonText: "Yes, I'm sure",
-                cancelButtonText: "Cannel"
+                confirmButtonText: "Yes, I'm sure!",
+                cancelButtonText: "Cancel"
             });
 
             if (result.value) {
                 try {
                     let response = await $.post(`./Brands/Delete/${trid}`);
                     if (response) {
-                        Swal.fire("Deleted!", "Successfully deleted the category.", "success");
+                        Swal.fire("Deleted!", "Successfully deleted the brand.", "success");
                         $(this).closest('tr').remove();
                     } else {
-                        Swal.fire("Lỗi !", "Deletion of the category was not successful.", "error");
+                        Swal.fire("Error !", "Deletion of the brand was not successful.", "error");
                     }
                 } catch (error) {
                     console.error("Error:", error);
-                    Swal.fire("Lỗi !", "Deletion of the category was not successful.", "error");
+                    Swal.fire("Error !", "Deletion of the brand was not successful.", "error");
                 }
             }
         });
+
     </script>
 }
