--- a/wwwroot/admin/css/custom.css
+++ b/wwwroot/admin/css/custom.css
@@ -1,108 +1,318 @@
-﻿.field-validation-error, .form-control.error + label {
-    width: 100%;
-    margin-top: .375rem;
-    font-size: .875rem;
-    color: #e04f1a !important;
+﻿.field-validation-error,
+.form-control.error + label {
+  width: 100%;
+  margin-top: 0.375rem;
+  font-size: 0.875rem;
+  color: #e04f1a !important;
 }
 
-.input-validation-error, .form-control.error {
-    border-color: #fae5dd !important;
-    background-color: #fae5dd !important;
+.input-validation-error,
+.form-control.error {
+  border-color: #fae5dd !important;
+  background-color: #fae5dd !important;
 }
 
-.input-validation-error:focus, .form-control.error:focus {
-    border-color: #e04f1a;
-    box-shadow: 0 0 0 0.25rem rgba(224, 79, 26, 0.25);
+.input-validation-error:focus,
+.form-control.error:focus {
+  border-color: #e04f1a;
+  box-shadow: 0 0 0 0.25rem rgba(224, 79, 26, 0.25);
 }
 
 .upload-image-container {
-    min-height: 150px;
-    background-color: #f8f9fc;
-    border: .125rem dashed #d1d8ea;
-    border-radius: .5rem;
-    position: relative;
-    cursor: pointer;
+  min-height: 150px;
+  background-color: #f8f9fc;
+  border: 0.125rem dashed #d1d8ea;
+  border-radius: 0.5rem;
+  position: relative;
+  cursor: pointer;
 }
 
-.upload-image-container .no-image p{
-    position: absolute;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    font-size: 1rem;
-    font-style: italic;
-    font-weight: 700;
-    color: #343a40;
+.upload-image-container .no-image p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1rem;
+  font-style: italic;
+  font-weight: 700;
+  color: #343a40;
 }
-
 
 .upload-image-container:hover {
-    background-color: #fff;
-    border-color: #0665d0;
+  background-color: #fff;
+  border-color: #0665d0;
 }
 
-.upload-image-container:hover .no-image p{
-    color: #0665d0;
+.upload-image-container:hover .no-image p {
+  color: #0665d0;
 }
 
-.has-image{
-    margin: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
+.has-image {
+  margin: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
 .preview-image-item {
-    position: relative;
-    width: 119px;
-    height: 119px;
+  position: relative;
+  width: 119px;
+  height: 119px;
 }
 
-.preview-image-item img{
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover ;
-    border-radius: 8px
+.preview-image-item img {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
-.preview-image-item img.active{
-    border: 2px solid #0665d0
+.preview-image-item img.active {
+  border: 2px solid #0665d0;
 }
 
 .preview-image-item span {
-    position: absolute;
-    right: 4px;
-    top: 4px;
-    color: #fff;
-    font-size: 10px;
-    height:22px;
-    width: 22px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(0 0 0 / 40%);
-    border-radius: 50%;
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  color: #fff;
+  font-size: 10px;
+  height: 22px;
+  width: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(0 0 0 / 40%);
+  border-radius: 50%;
 }
 
-.img-variant{
-    width: 60px;
-    height: 60px;
-    border-radius: 5px;
-    object-fit: contain
+.img-variant {
+  width: 60px;
+  height: 60px;
+  border-radius: 5px;
+  object-fit: contain;
 }
 
 [data-notify] {
-    z-index: 9999 !important;
+  z-index: 9999 !important;
 }
 
 .upload-image-container #upload-image-error {
-    position: absolute;
-    bottom: 0;
-    transform: translateY(calc(100% + 10px));
+  position: absolute;
+  bottom: 0;
+  transform: translateY(calc(100% + 10px));
 }
 
 .upload-image-input.is-invalid ~ .upload-image-container {
-    border: .125rem dashed #e04f1a;
+  border: 0.125rem dashed #e04f1a;
+}
+
+.container_check {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  line-height: 1.7;
+  margin-bottom: 8px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.container_check input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+.container_check input:checked ~ .checkmark {
+  background-color: #004dda;
+  border: 1px solid transparent;
+}
+.container_check .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border: 1px solid #dddddd;
+  background-color: #fff;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.container_check .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 7px;
+  top: 3px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.container_check input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.filters_listing_1 {
+  padding: 15px 0 10px 0;
+}
+.filters_listing_1 .dropdown {
+  position: relative;
+  text-align: left;
+}
+.filters_listing_1 .dropdown a.drop {
+  color: #444;
+  font-weight: 500;
+  transition: all 0.3s;
+  display: block;
+  position: relative;
+  background-color: #fff;
+  border: 1px solid #ededed;
+  padding: 10px;
+  line-height: 1;
+}
+@media (max-width: 991px) {
+  .filters_listing_1 .dropdown a.drop {
+    margin-bottom: 5px;
+  }
+}
+.filters_listing_1 .dropdown a.drop:after {
+    font-family: "Font Awesome 6 Free", "Font Awesome 6 Pro";
+    content: "\f107";
+    font-size: 14px;
+    font-size: 0.875rem;
+    color: #999;
+    font-weight: 600;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+.filters_listing_1 .dropdown.show a:after {
+  transform: rotate(180deg);
+}
+.filters_listing_1 .dropdown .dropdown-menu {
+  background: #fff;
+  border: none;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.175);
+  -moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.175);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.175);
+  padding: 15px;
+  white-space: normal;
+  width: 100%;
+  color: #444;
+}
+.filters_listing_1 .dropdown a.apply_filter {
+  text-align: center;
+  background-color: #004dda;
+  color: #fff;
+  display: block;
+  padding: 10px 0;
+  line-height: 1;
+  font-weight: 500;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+}
+.filters_listing_1 .dropdown a.apply_filter:hover {
+  background-color: #ffc107;
+  color: #111;
+}
+
+.filter_type {
+  font-size: 14px;
+  font-size: 0.875rem;
+}
+.filter_type h6 {
+  border-top: 1px solid #dddddd;
+  margin: 15px 0;
+  padding: 15px 0 0 0;
+}
+.filter_type label {
+  font-weight: 400;
+}
+.filter_type label small {
+  float: right;
+  color: #777;
+  padding-top: 3px;
+}
+.filter_type ul {
+  max-height: 200px;
+  overflow: auto;
+  list-style: none;
+  padding: 5px 0 0 0;
+  margin: 0 0 15px 0;
+  margin-bottom: 0!important
+}
+.filter_type ul li {
+  margin-bottom: 5px;
+}
+.filter_type ul li:last-child {
+  margin-bottom: 0;
+}
+.filter_type.version_2 {
+  border-bottom: 1px solid #ededed;
+  margin: 0 -15px 15px -15px;
+  padding: 0 15px;
+}
+.filter_type.version_2 ul {
+  list-style: none;
+  padding: 5px 5px 0 5px;
+}
+.filter_type.version_2 h4 a {
+  display: block;
+  font-size: 15px;
+  font-size: 0.9375rem;
+  color: #444;
+  padding: 8px 10px;
+  margin: -5px -5px 0 -5px;
+  line-height: 1;
+  position: relative;
+}
+.filter_type.version_2 h4 a:after {
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  font-family: "themify";
+  font-size: 14px;
+  font-size: 0.875rem;
+  position: absolute;
+  right: 10px;
+  top: 8px;
+}
+.filter_type.version_2 h4 a.opened {
+  background-color: #f8f8f8;
+}
+.filter_type.version_2 h4 a.opened:after {
+  content: "\e64b";
+  transform: rotate(180deg);
+}
+.filter_type.version_2 h4 a.closed:after {
+  content: "\e64b";
+  transform: rotate(0);
 }
