--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -80,4 +80,11 @@
 	<!-- /bg_white -->
 </main>
 
+@section Scripts {
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
+}
+
+
 
